k8s/dev/echo-orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-orchestrator-deployment
  namespace: processing
  labels:
    app: echo-orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-orchestrator
  template:
    metadata:
      labels:
        app: echo-orchestrator
    spec:
      containers:
        - name: echo-orchestrator
          image: processing/echo-orchestrator:latest
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            initialDelaySeconds: 10
            periodSeconds: 10
