k8s/dev/echo-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-worker-deployment
  namespace: processing
  labels:
    app: echo-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-worker
  template:
    metadata:
      labels:
        app: echo-worker
    spec:
      containers:
        - name: echo-worker
          image: processing/echo-worker:latest
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8092
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8092
            initialDelaySeconds: 10
            periodSeconds: 10
