k8s/dev/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: infra
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: infra
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4-deployment
  namespace: infra
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4-service
  namespace: infra
spec:
  selector:
    app: pgadmin4
  ports:
    - port: 5431
      targetPort: 80
