k8s/dev/tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-deployment
  namespace: processing
  labels:
    app: tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker
  template:
    metadata:
      labels:
        app: tracker
    spec:
      containers:
        - name: tracker
          image: processing/tracker:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: tracker-service
  namespace: processing
spec:
  selector:
    app: tracker
  ports:
    - protocol: TCP
      port: 8081
