k8s/dev/ui-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-admin-deployment
  namespace: processing
  labels:
    app: ui-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-admin
  template:
    metadata:
      labels:
        app: ui-admin
    spec:
      containers:
        - name: ui-admin
          image: processing/ui-admin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui-admin-service
  namespace: processing
spec:
  selector:
    app: ui-admin
  ports:
    - protocol: TCP
      port: 80
